[gd_scene load_steps=9 format=3 uid="uid://bj8tfqpx3l0f6"]

[ext_resource type="Script" path="res://Assets/Player/punchanim_handler.gd" id="1_1ebxk"]
[ext_resource type="Material" uid="uid://clmvctq8hrrax" path="res://Assets/Materials/Transparent1.tres" id="2_572b6"]
[ext_resource type="Script" path="res://Assets/Entities/on_hitbox_hit.gd" id="2_bo3c8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3ajat"]
size = Vector3(1, 1.75, 2)

[sub_resource type="BoxMesh" id="BoxMesh_8yt0g"]
size = Vector3(1, 1.75, 2)

[sub_resource type="Animation" id="Animation_xqtl5"]
resource_name = "Hit"
length = 0.1
step = 0.01
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.0001, 1, -0.231892, 0, 0, 0.1, 1, 0, 0, -1.476)
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.1, 1, 1, 0.5, 0.5)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, -0.101994, 0, 0.994785)

[sub_resource type="Animation" id="Animation_xfo8u"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6us8"]
_data = {
"Hit": SubResource("Animation_xqtl5"),
"RESET": SubResource("Animation_xfo8u")
}

[node name="Root" type="Node3D"]
script = ExtResource("1_1ebxk")

[node name="ATK_HitBox" type="Area3D" parent="."]
transform = Transform3D(0.979194, 0, -0.202924, 0, 1, 0, 0.202924, 0, 0.979194, 0, 0, 0)
collision_layer = 0
collision_mask = 4
script = ExtResource("2_bo3c8")
metadata/_edit_group_ = true

[node name="HitBoxCol" type="CollisionShape3D" parent="ATK_HitBox"]
shape = SubResource("BoxShape3D_3ajat")

[node name="ColVisual" type="MeshInstance3D" parent="ATK_HitBox/HitBoxCol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.251765)
mesh = SubResource("BoxMesh_8yt0g")
surface_material_override/0 = ExtResource("2_572b6")

[node name="AttackAnim" type="AnimationPlayer" parent="ATK_HitBox"]
libraries = {
"": SubResource("AnimationLibrary_i6us8")
}

[node name="AttackHBExistTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="ATK_HitBox" to="ATK_HitBox" method="_on_area_entered"]
[connection signal="timeout" from="AttackHBExistTimer" to="ATK_HitBox" method="_on_attack_hb_exist_timer_timeout"]
